# Comfy_HunyuanImage3

./: .gitignore  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  Eric_Hunyuan3.code-workspace  GITHUB_SETUP.md  LICENSE  README.md  __init__.py  api_config.ini.example  hunyuan_api_config.py  hunyuan_api_nodes.py  hunyuan_block_swap.py  hunyuan_cache_v2.py  hunyuan_device.py  hunyuan_full_bf16_nodes.py  hunyuan_highres_nodes.py  hunyuan_instruct_nodes.py  hunyuan_latent_nodes.py  hunyuan_loader_clean.py  hunyuan_memory_budget.py  hunyuan_moe_test_node.py  hunyuan_quantized_nodes.py  hunyuan_shared.py  hunyuan_unified_v2.py  hunyuan_vae_simple.py  pyproject.toml  requirements.txt  test_bitsandbytes_to.py
.github/workflows/: publish.yml
.history/: hunyuan_full_bf16_nodes_20251120134310.py  hunyuan_full_bf16_nodes_20251120172032.py  hunyuan_full_bf16_nodes_20251120174157.py  hunyuan_quantized_nodes_20251119010527.py  hunyuan_quantized_nodes_20251119010545.py  hunyuan_quantized_nodes_20251119010554.py  hunyuan_quantized_nodes_20251119010604.py  hunyuan_quantized_nodes_20251120134252.py  hunyuan_quantized_nodes_20251120171548.py  hunyuan_quantized_nodes_20251120171629.py  hunyuan_quantized_nodes_20251120172052.py  hunyuan_quantized_nodes_20251120174157.py  hunyuan_shared_20251120134252.py  hunyuan_shared_20251120172052.py
Docs/: FEATURE_REQUEST_ACCELERATE.md  FEATURE_REQUEST_BITSANDBYTES.md  IMAGE_BASE_SIZE_EXPLORATION.md  INT8_LOADING_GUIDE.md  Int8_runtime.md  LATENT_CONTROL_IMPLEMENTATION_PLAN.md  LATENT_CONTROL_ROLLBACK.md  PERFORMANCE_NOTES.md
Docs/examples/: HunyuanImage3-NF4-example1.md  README.md
Docs/workflows/: README.md
quantization/: README.md  hunyuan_quantize_instruct_distil_int8.py  hunyuan_quantize_instruct_distil_nf4.py  hunyuan_quantize_instruct_int8.py  hunyuan_quantize_instruct_nf4.py  hunyuan_quantize_int8.py  hunyuan_quantize_nf4.py  upload_v2_to_hf.py
