[project]
name = "hunyuanimage3"
description = "Professional ComfyUI custom nodes for Tencent's HunyuanImage-3.0 80B multimodal model — text-to-image, Instruct text-to-image with CoT reasoning, image editing with natural language, multi-image fusion (2–5 inputs), Instruct-Distil 8-step fast inference, experimental latent/composition control, block swap, multiple quantization modes (BF16/INT8/NF4), smart memory management, and high-res generation up to 4K+."
version = "1.3.0"
license = {file = "LICENSE"} 
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = ["transformers>=4.47.0", "torch>=2.8.0", "bitsandbytes>=0.48.2", "accelerate>=1.2.1", "safetensors>=0.4.5", "huggingface_hub>=0.20.0", "pillow>=11.0.0", "numpy>=1.26.0", "requests>=2.32.0", "psutil>=5.9.0"]

[project.urls]
Repository = "https://github.com/EricRollei/Comfy_HunyuanImage3"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/EricRollei/Comfy_HunyuanImage3/wiki"
"Bug Tracker" = "https://github.com/EricRollei/Comfy_HunyuanImage3/issues"

[tool.comfy]
PublisherId = "ericrollei"
DisplayName = "Comfy_HunyuanImage3"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

